# ANNSIM_22

./: .gitignore  LICENSE  README.md  update_cmake.sh
DNN/CIFAR10/: CIFAR10_Posit.ipynb  CIFAR10_QTorchFloat.ipynb  cifar10_posit.py  plots.ipynb  run.sh
DNN/CIFAR10/FP16/: test.hist  train.hist
DNN/CIFAR10/FP32/: test.hist  train.hist
DNN/CIFAR10/P10/: test.hist  train.hist
DNN/CIFAR10/P12/: test.hist  train.hist
DNN/CIFAR10/P14/: test.hist  train.hist
DNN/CIFAR10/P16/: test.hist  train.hist
DNN/CIFAR10/P8/: test.hist  train.hist
DNN/CIFAR10/bfloat16/: test.hist  train.hist
DNN/MNIST/: mnist.py  mnist_IBM8.py  mnist_Posit8.py  mnist_posit.py  plots.ipynb  run.sh
DNN/MNIST/FP16/: test.hist  train.hist
DNN/MNIST/FP32/: test.hist  train.hist
DNN/MNIST/P10/: test.hist  train.hist
DNN/MNIST/P12/: test.hist  train.hist
DNN/MNIST/P14/: test.hist  train.hist
DNN/MNIST/P16/: test.hist  train.hist
DNN/MNIST/P8/: test.hist  train.hist
DNN/MNIST/bfloat16/: test.hist  train.hist
DNN/SVHN/: plots.ipynb  run.sh  svhn.py  svhn_posit.py
DNN/SVHN/FP16/: test.hist  train.hist
DNN/SVHN/FP32/: test.hist  train.hist
DNN/SVHN/P10/: test.hist  train.hist
DNN/SVHN/P12/: test.hist  train.hist
DNN/SVHN/P14/: test.hist  train.hist
DNN/SVHN/P16/: test.hist  train.hist
DNN/SVHN/P8/: test.hist  train.hist
DNN/SVHN/bfloat16/: test.hist  train.hist
brownian_motion/src/: brownian_motion.cpp  brownian_motion_test.cpp
brownian_motion/src/orig/: brownian_motion_simulation.cpp  brownian_motion_simulation.hpp  brownian_motion_simulation_test.cpp
fft/: CMakeLists.txt  error.py  plot.ipynb
fft/src/: fft.cpp  test.cpp
fft_other/src/: fft.cpp
fft_other/src/orig/: fft.cpp
k-means/: CMakeLists.txt
k-means/data/: 100.csv  100k.csv
k-means/src/: k-means.cpp
k-means/src/orig/: k-means.cpp
lorenz_ode/: CMakeLists.txt  plot.py  plot.sh  plot_all.py
lorenz_ode/src/: lorenz_ode.cpp  lorenz_ode_cfloat.cpp
molecular_dynamics/: CMakeLists.txt
molecular_dynamics/src/: molecular_dynamics.cpp
molecular_dynamics_openmp/: CMakeLists.txt
molecular_dynamics_openmp/src/: molecular_dynamics.cpp  orig_md_openmp.cpp
my_fft/: CMakeLists.txt  error.py  run.sh
physic_probs/: error_plots.ipynb
physic_probs/brownian_motion/: CMakeLists.txt
physic_probs/brownian_motion/src/: brownian_motion.hpp  brownian_motion_impl.hpp
physic_probs/fft/: plot.ipynb  run.sh
physic_probs/fft/src/: fft.hpp
physic_probs/lorenz_ode/: error.py  plot.py  plot_all.py
physic_probs/lorenz_ode/src/: lorenz_ode.cpp  orig_lorenz_ode.cpp
